--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ elasticsearch
 groq
 python-dotenv
 pandas
+matplotlib
 numpy==1.26.4
 openai
 scikit-learn
+seaborn
 sentence_transformers==2.7.0
 tiktoken
 torch
